--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,2 +1,38 @@
-<!-- your html code here -->
-<p>Hello, I'm the navbar.html</p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+  <div class="container-fluid">
+    
+    <a class="navbar-brand text-light" href="#">start bootstrap</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">about</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">service</a>
+        </li>
+       
+        
+<li class="nav-item">
+          <a class="nav-link text-light" href="#">portfolio</a>
+        </li>
+
+
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">contract</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">contact</a>
+        </li>
+
+
+      </ul>
+    </div>
+  </div>
+</nav>
