--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,44 @@
-<!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+
+<div class=" bg-white">
+    <div class="container text-start bg-white text-dark">
+
+
+    <h1 class="">Porfolio</h1>
+    <p class="">Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
+
+<div class=" row " >
+  <div class="col">
+<div class="card" style="width: 95%; height: 25rem; margin: 10px;">
+  <img style="width: 100%; height: 25rem ;" src="..." class="card-img-top bg-secondary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title text-primary">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+  </div>
+</div>
+</div>
+
+
+  <div class="col">
+<div class="card" style="width: 95%; height: 25rem; margin: 10px;">
+  <img style="width: 100%; height: 25rem ;" src="..." class="card-img-top bg-secondary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title text-primary">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+  </div>
+</div>
+  </div>
+
+
+  <div class="col">
+<div class="card" style="width: 95%; height: 25rem; margin: 10px;">
+  <img style="width: 100%; height: 25rem ;" src="..." class="card-img-top bg-secondary" alt="...">
+  <div class="card-body">
+    <h5 class="card-title text-primary">Card title</h5>
+    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+  </div>
+</div>
+  </div>
+</div>
+
+</div>
+</div>
