--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,34 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>First Heading</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body >
+    <div class="container-fluid mx-auto w-75">
+        <hr class="bg-secondary" />
+        <div class="row p-4">
+            <div class="col-sm-8">
+                <h3>The First Heading <span style="color: gray;">Will Catch Your Eye</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolor eum inventore
+                    perferendis rerum dolore adipisci iste alias. Soluta possimus sequi eius eveniet quis adipisci quas
+                    fuga vel mollitia provident.
+                    Praesentium fugit accusantium corrupti.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <img src="assets/img/1.jpg" class="img-fluid rounded-circle" alt="...">
+            </div>
+        </div>
+        <hr class="bg-secondary" />
+    </div>
+</body>
+
+</html>
