--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,23 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="bg-white p-5">
+  <div class="container">
+    <div class="row g-0 align-items-center"> <!-- no gutter, vertical alignment -->
+      <div class="col-4">
+        <img 
+          class="rounded-circle" 
+          style="width: 300px; height: 300px;" 
+          src="https://fastly.picsum.photos/id/2/3888/2592.jpg?hmac=H2kj1bNmSkXNECY4B4sHjQzZVa05ruYwqevOOYs4Q8A" 
+        >
+      </div>
+      <div class="col-8" style="margin-left: -10px;"> <!-- negative margin pulls it closer -->
+        <h5 class="card-title"><strong>The Second Heading</strong> Is Pretty Cool Too.</h5>
+        <p>
+          This content will for sure knock your socks and shoes off! Let's tap into your imagination.
+          Picture your view being very vibrant with the colors. Imagine yourself sitting here with 
+          your fresh and hot morning coffee. Take a sip of your coffee, then read your notes.
+          We can now get to work.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
