Please enter the commit message for your changes. Lines starting

--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,11 @@
 body{
     background: #BDBDBD;
 }
+
+.tag-font{
+     height: 57vh;
+      justify-content: center;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+      place-content: center;
+      background-size: cover;
+}
