--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,32 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+ <!-- CONTACT  -->
+
+ <div class="contact"> 
+    <div class="container bg-white mb-5">
+     
+        <div class="contactt">
+      <strong>Contact</strong>
+      <p>
+         Non dolore Lorem ea cillum enim non.Ex labore nostrud nulla voluptate magna incididunt eiusmod ullamco. 
+         Amet Lorem sunt ea eiusmod eu id consequat deserunt. 
+         Cillum elit eu enim adipisicing ea aliquip duis laborum Lorem magna aute magna ipsum anim.
+      </p>
+      </div>
+
+      <form class="bg-light w-75 mx-auto"> <!--mx-auto centers the form groups below-->
+        <div class="form-group m-5">
+           <label for="FormControlInput1">Email address</label>
+           <input type="email" class="form-control" id="FormControlInput1" placeholder="name@example.com">
+        </div>
+        
+        <div class="form-group m-5 mt-1">
+          <label for="FormControlTextarea1">Your Message</label>
+          <textarea class="form-control" id="FormControlTextarea1" rows="3"></textarea>
+        </div>
+
+        <div class="d-flex justify-content-end"> <!--this div positions Submit button w/ div commands-->
+        <button type="button" class="btn btn-primary m-1">Submit</button>
+        </div>
+
+      </form>
+     </div>
+</div>
