--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,16 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<!--Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html -->
+
+<div class="tagline">
+  <div class="container">
+
+    <div class="tag-font text-center bg-image" style="background-image: url('assets/img/bg.jpg')"  >
+        <h1 class="display-1 bg-light mb"><strong>One Page Wonder</strong></h1> <!--'display' makes header font even bigger-->
+        <h2 class="display-5 bg-light"><strong>Will Knock Your Socks Off</strong></h2>
+    </div>
+    
+  </div>
+
+
+</div>
